ui/gfx/font_render_params.cc
@@ -8,19 +8,6 @@
 
 namespace gfx {
 
-FontRenderParams::FontRenderParams()
-    : antialiasing(true),
-      subpixel_positioning(true),
-      autohinter(false),
-      use_bitmaps(false),
-      hinting(HINTING_MEDIUM),
-      subpixel_rendering(SUBPIXEL_RENDERING_NONE) {
-}
-
-FontRenderParams::FontRenderParams(const FontRenderParams& other) = default;
-
-FontRenderParams::~FontRenderParams() {}
-
 // static
 SkFontLCDConfig::LCDOrder FontRenderParams::SubpixelRenderingToSkiaLCDOrder(
     FontRenderParams::SubpixelRendering subpixel_rendering) {
